# cpp_idioms

./: .gitignore  README.md
bvar_snippet/: divide_on_add.cpp  readme.md
cpp_sort/: main.cpp  readme.md
cuda/block_online_softmax/: main.cpp  main.py  readme.md  run.sh  softmax.cu
cuda/load_so/: main.py
cuda/online_softmax/: bench.py  main.cpp  main.py  readme.md  run.sh  softmax.cu
cuda/safe_softmax/: bench.py  main.py  readme.md  safe_softmax_cuda.cpp  safe_softmax_cuda_kernel.cu
cuda/softmax/: main.cpp  main.py  readme.md  softmax.cu
factory_and_virtual/: CMakeLists.txt  IObject.h  ObjectImpl.cc  main.cc
lto_optimize/: build.sh  build_shared.sh  main.cpp  readme.md  show.sh
lto_optimize/math_lib/: square.cpp  square.h
pimpl/: CMakeLists.txt  main.cpp
pimpl_about/fast_pimpl/: CMakeLists.txt  main.cpp  wrapper.cpp  wrapper.h
pimpl_about/pimpl/: book.h  impl.cpp  impl.h
pimpl_about/pimpl_unique_ptr/: CMakeLists.txt  impl.cpp  main.cpp  public.h
shared_link_static/: CMakeLists.txt  build.sh  libC.cpp  libD.cpp  libE.cpp  libE.h  main.cpp  readme.md
